--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 button {
     padding: 15px;
-    color: greenyellow;
+    color: orange;
     border-radius: 10px;
     background: white;
-    border: 1px solid black;
+    border: 1px solid gray;
 }
